src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__dynamic_highlighting_disabled__no_callables_no_paths.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"ls test.txt\")?"
---
ls test.txt

0  2   `ls`         variable.function
2  11  ` test.txt`  meta.function-call.arguments
